--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,18 @@
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
+        <style>
+          body {
+            background-image: url('image/imagepoo3.jpeg');
+            background-repeat: no-repeat;
+            background-size: cover;
+          }
+        </style>
+
+
+
+    </head>
+    <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -55,12 +67,6 @@
     </div>
   </div>
 </nav>
-
-
-
-
-    </head>
-    <body>
         {% block body %}{% endblock %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
