--- a/templates/demande/index.html.twig
+++ b/templates/demande/index.html.twig
@@ -1,30 +1,28 @@
+
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DemandeController!
-{% endblock %}
+
 
 {% block body %}
+	<h1 class="bg-primary text-uppercase text-center">{{ titre }} </h1>
+	{# <div>{{ Htmlprovider.navInfo(titre) }}</div> #}
 	<div class="container">
 		<table class="table table-striped table">
-			<tr>
+			<tr class="bg-primary w-100 vh-50">
 				<th>Motif</th>
 				<th>date</th>
 				<th>Etat</th>
 				<th>Action</th>
 			</tr>
 			<h1>
-				{% for demande in demandes %}!
+				{% for demande in demandes %}
 					<tr>
 						<td>{{demande.motif}}</td>
 						<td>{{demande.date | date}}</td>
 						<td>{{demande.etat}}</td>
 						<td>
 							<button class="btn btn-info">Detail</button>
-						</td>
-						<td>
 							<button class="btn btn-primary">Modifier</button>
-						</td>
-						<td>
 							<button class="btn btn-danger">Supprimer</button>
 						</td>
 
@@ -32,7 +30,7 @@
 				{% endfor %}
 			</table>
 		</div>
-		<div class="navigation">
+		<div class="container d-flex justify-content-center mt-5">
 			{{ knp_pagination_render(demandes) }}
 		</div>
 	{% endblock %}
