--- a/templates/etudiant/index.html.twig
+++ b/templates/etudiant/index.html.twig
@@ -1,43 +1,35 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}Hello EtudiantController!{% endblock %}
-
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-<table class="example">
-<tr>
-    <th>Nom Complet</td>
-    <th>Login</td>
-    <th>Adresse</td>
-    <th>Sexe</td>
-    <th>Etat</td>
-    <th>Matricule</td>
-</tr>
-    <h1>Hello {% for etudiant in etudiants %}! 
-    <tr>
-           <td> {{etudiant.nonComplet}}</td>
-           <td> {{etudiant.Login}}</td>
-           <td> {{etudiant.Adresse}}</td>
-           <td> {{etudiant.Sexe}}</td>
-           <td> {{etudiant.Etat}}</td>
-           <td> {{etudiant.Matricule}}</td>
-           <td><button class="btn btn-primary">Supprimer</button>
-           <td><button class="btn btn-primary">Detail</button>
-           <td><button class="btn btn-primary">Modifier</button>
-    </tr>
-            
-    {% endfor %}
-    ✅</h1>
+	<h2>{{ titre }}</h2>
+	<div class="example-wrapper">
+		<table class="example">
+			<tr>
+				<th>N°</th>
+				<th>Nom Complet</th>
+		        <th>Login</th>
+	            <th>Adresse</th>
+                <th>Sexe</th>
+                 <th>Etat</th>
+                <th>Matricule</th>
+
+            </tr>
+    <h1>
+        {% set i= 0 %}
+        {% for etudiant in etudiants %}
+        <tr>
+            <td>{% set i= i+1 %}{{i}}</td>
+            <td>{{etudiant.nonComplet}}</td>
+            <td>{{etudiant.Login}}</td>
+            <td>{{etudiant.Adresse}}</td>
+            <td>{{etudiant.Sexe}}</td>
+            <td>{{etudiant.Etat}}</td>
+            <td>{{etudiant.Matricule}}</td>
+           <td> <a href="{{path('app_supprimer', {id: etudiant.id}) }}" class="btn btn-primary">Supprimer</a></td>
+           <td> <a href="{{path('app_afficher', {id: etudiant.id}) }}" class="btn btn-primary">Detail</button></td>
+            <td><a href="{{path('app_edith', {id: etudiant.id}) }}" class="btn b btn-primary">Modifier</a></td>
+        </tr>{% endfor %}
+    </h1>
 </table>
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/moustapha/Bureau/PROJET_POO/src/Controller/EtudiantController.php'|file_link(0) }}">src/Controller/EtudiantController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/moustapha/Bureau/PROJET_POO/templates/etudiant/index.html.twig'|file_link(0) }}">templates/etudiant/index.html.twig</a></code></li>
-    </ul>
 </div>
-{% endblock %}
+{{ knp_pagination_render(etudiants) }}{% endblock %}
