--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,91 @@
     <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+  <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+    Etudiant
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <li><a class="dropdown-item" href="/etudiant">lister</a></li>
+    <li><a class="dropdown-item" href="/etudiant/inscription">Ajouter</a></li>
+  </ul>
+  </div>
+
+    <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+    Classe
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <li><a class="dropdown-item" href="/classe">lister</a></li>
+    <li><a class="dropdown-item" href="/classe/ajouteclass">Ajouter</a></li>
+  </ul>
+  </div>
+
+    <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+    Demande
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <li><a class="dropdown-item" href="/demande">lister</a></li>
+    <li><a class="dropdown-item" href="/demande/ajout">Ajouter</a></li>
+  </ul>
+  </div>
+
+   <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+    Modules
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <li><a class="dropdown-item" href="/module">lister</a></li>
+    <li><a class="dropdown-item" href="/module/ajoutermodule">Ajouter</a></li>
+  </ul>
+  </div>
+
+    <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+   Professeurs
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <li><a class="dropdown-item" href="/professeur">lister</a></li>
+    <li><a class="dropdown-item" href="/professeur">Ajouter</a></li>
+  </ul>
+  </div>
+
+     <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+   Les responsables
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <li><a class="dropdown-item" href="/rp">lister</a></li>
+    <li><a class="dropdown-item" href="/rp/ajouterp">Ajouter</a></li>
+  </ul>
+  </div>
+
+       <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+   Les responsables
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <li><a class="dropdown-item" href="/rp">lister</a></li>
+    <li><a class="dropdown-item" href="/rp/ajouterp">Ajouter</a></li>
+  </ul>
+  </div>
+
+
+
+
+
+
+
+  
+ 
+
+   <ul class="navbar-nav me-auto">Les Ac
+    <li class="nav-item"><a class="nav-link" href="/ac">lister</a></li>
+    <li class="nav-item"><a class="nav-link" href="/ac/ajouteac">ajouter</a></li>
+  </ul>
+
+    <a class="navbar-brand" href="user">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -41,20 +125,19 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="etudiant">Listes Etudiant</a>
+          <a class="nav-link" href="etudiant"><Listes Etudiant</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="demande">Demande</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="etudiant/inscription">inscription</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Etudiant</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="#">lister Etudiant</a>
+            <a class="dropdown-item" href="#">Ajoutez Etudiant</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Separated link</a>
           </div>
