--- a/templates/classe/index.html.twig
+++ b/templates/classe/index.html.twig
@@ -1,20 +1,24 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ClasseController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{{ titre }}
+<table class="">
+    <tr>
+        <th>Libelle</th>
+        <th>Fillier</th>
+        <th>Niveau</th>
+    </tr>
+    {% for class in classes %}
+        <tr>
+        <td>{{ class.libelle }}</td>
+        <td>{{ class.filier }}</td>
+        <td>{{ class.niveau }}</td>
+        <td><a href="{{path('app_ajouteclass',{id: class.id}) }}">Supprimer</a></td>
+        <td><a href="{{path('app_ajouteclass',{id: class.id}) }}">Detail</a></td>
+        <td><a href="{{path('app_ajouteclass',{id: class.id}) }}">Modifier</a></td>
+        </tr>
+    {% endfor %}
+</table
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/moustapha/Bureau/PROJET_POO/src/Controller/ClasseController.php'|file_link(0) }}">src/Controller/ClasseController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/moustapha/Bureau/PROJET_POO/templates/classe/index.html.twig'|file_link(0) }}">templates/classe/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
