--- a/templates/module/index.html.twig
+++ b/templates/module/index.html.twig
@@ -1,20 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ModuleController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{{title}}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/moustapha/Bureau/PROJET_POO/src/Controller/ModuleController.php'|file_link(0) }}">src/Controller/ModuleController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/moustapha/Bureau/PROJET_POO/templates/module/index.html.twig'|file_link(0) }}">templates/module/index.html.twig</a></code></li>
-    </ul>
-</div>
+<table class="">
+    <tr>
+        <th>Libelle</th>
+    </tr>
+    {% for module in modules %}
+        <tr>
+            <td>{{module.libelle}}</td>
+        </tr>
+        <td><a href="{{path('app_module', {id: module.id}) }}">Supprimer</a></td>
+        <td><a href="{{path('app_module', {id: module.id}) }}">Detail</a></td>
+        <td><a href="{{path('app_module', {id: module.id}) }}">Modifier</a></td>
+    {% endfor %}
+<table>
 {% endblock %}
