--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,7 +7,7 @@
 
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.login) }}
-        {{ form_row(registrationForm.etat) }}
+        {# {{ form_row(registrationForm.etat) }} #}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
